--- a/MoneyKeeper/MoneyKeeper/Storyboards/AddCategory.storyboard
+++ b/MoneyKeeper/MoneyKeeper/Storyboards/AddCategory.storyboard
@@ -36,10 +36,10 @@
                                 <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="VZT-wa-Wew">
-                                <rect key="frame" x="15" y="193.5" width="384" height="134"/>
+                                <rect key="frame" x="15" y="193.5" width="384" height="194"/>
                                 <subviews>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="3Qy-So-hT5">
-                                        <rect key="frame" x="0.0" y="0.0" width="384" height="51"/>
+                                        <rect key="frame" x="30" y="30" width="324" height="51"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="wuS-dP-xoO"/>
                                         </constraints>
@@ -53,7 +53,7 @@
                                         </connections>
                                     </segmentedControl>
                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="DaO-8v-9Jn">
-                                        <rect key="frame" x="0.0" y="100" width="384" height="34"/>
+                                        <rect key="frame" x="30" y="130" width="324" height="34"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Em-y6-b7t">
                                                 <rect key="frame" x="0.0" y="6" width="59" height="22.5"/>
@@ -62,17 +62,19 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Category name" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="e2p-Ew-vim">
-                                                <rect key="frame" x="69" y="0.0" width="315" height="34"/>
+                                                <rect key="frame" x="69" y="0.0" width="255" height="34"/>
                                                 <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="20"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="yes" spellCheckingType="yes" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                                             </textField>
                                         </subviews>
                                     </stackView>
                                 </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <edgeInsets key="layoutMargins" top="30" left="30" bottom="30" right="30"/>
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.1960767508" green="0.24313795569999999" blue="0.32548889520000002" alpha="0.90003188775510201" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="f93-kX-diz" firstAttribute="height" secondItem="5EZ-qb-Rvc" secondAttribute="height" multiplier="0.1" id="6w9-5W-imd"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="p7j-rb-ntK" secondAttribute="trailing" id="EJS-ua-8lR"/>
@@ -86,6 +88,7 @@
                     <connections>
                         <outlet property="categoryName" destination="e2p-Ew-vim" id="TG4-c8-q6r"/>
                         <outlet property="categoryType" destination="3Qy-So-hT5" id="GWT-MV-5un"/>
+                        <outlet property="detailedStack" destination="VZT-wa-Wew" id="XjV-Cs-kpJ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -95,9 +98,6 @@
     </scenes>
     <resources>
         <image name="pencil.tip" catalog="system" width="99" height="128"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="systemYellowColor">
             <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
